refactor: improve output generateStatistics